# Reduced-OpenCV-Android

OpenCV-android-sdk/sdk/: .gitignore  build.gradle
application/: settings.gradle
application/app/: build.gradle
application/app/src/androidTest/java/com/emmanuelmess/opencvstatictest/: ExampleInstrumentedTest.java
application/app/src/main/: AndroidManifest.xml
application/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
application/app/src/main/java/com/emmanuelmess/opencvstatictest/: MainActivity.java
application/app/src/main/res/layout/: activity_main.xml
application/app/src/main/res/values/: strings.xml
application/app/src/test/java/com/emmanuelmess/opencvstatictest/: ExampleUnitTest.java
application/gradle/wrapper/: gradle-wrapper.properties
